Added input box and submit button.

--- a/main.html
+++ b/main.html
@@ -21,7 +21,9 @@
 	
 	<form class="form-group">
 		<!-- Input box and submit button -->
-		<input type="text" name="list-input">
+		<h2>Shopping List</h2>
+		<hr>
+		<input type="text" name="list-input" placeholder="Add something!">
 		<button id= "submit-button">Add item to list</button>
 	</form>
 	
