added custom checkmarks and new list items

--- a/main.html
+++ b/main.html
@@ -23,12 +23,39 @@
 		<!-- Input box and submit button -->
 		<h2>Shopping List</h2>
 		<hr>
-		<input type="text" name="list-input" placeholder="Add something!">
-		<button id= "submit-button">Add item to list</button>
+		<div class="submit-wrapper">
+			<input type="text" name="list-input" 
+			class="input-text" placeholder="Add something!">
+			<button id= "submit-button">Add item to list</button>
+		</div>
 	</form>
 	
 	<ul class= "list">
 		<!-- check box and list items -->
+		<li>
+			<label class="checkmark"><input type="checkbox" class="is-completed"><span class="check-icon"></span></label>
+			Apples
+		</li>
+		<li>
+			<label class="checkmark"><input type="checkbox" class="is-completed"><span class="check-icon"></span></label>
+			Bananas
+
+		</li>
+		<li>
+			<label class="checkmark"><input type="checkbox" class="is-completed"><span class="check-icon"></span></label>
+			Pears
+
+		</li>
+		<li>
+			<label class="checkmark"><input type="checkbox" class="is-completed"><span class="check-icon"></span></label>
+			Grapes
+
+		</li>
+		<li>
+			<label class="checkmark"><input type="checkbox" class="is-completed"><span class="check-icon"></span></label>
+			Butternut Squash
+
+		</li>
 	</ul>
 
 </body>
