--- a/main.html
+++ b/main.html
@@ -34,26 +34,26 @@
 		<!-- check box and list items -->
 		<li>
 			<label class="checkmark"><input type="checkbox" class="is-completed"><span class="check-icon"></span></label>
-			Apples
+			Apples <i class="fa fa-trash-o" aria-hidden="true"></i>
 		</li>
 		<li>
 			<label class="checkmark"><input type="checkbox" class="is-completed"><span class="check-icon"></span></label>
-			Bananas
+			Bananas <i class="fa fa-trash-o" aria-hidden="true"></i>
 
 		</li>
 		<li>
 			<label class="checkmark"><input type="checkbox" class="is-completed"><span class="check-icon"></span></label>
-			Pears
+			Pears <i class="fa fa-trash-o" aria-hidden="true"></i>
 
 		</li>
 		<li>
 			<label class="checkmark"><input type="checkbox" class="is-completed"><span class="check-icon"></span></label>
-			Grapes
+			Grapes <i class="fa fa-trash-o" aria-hidden="true"></i>
 
 		</li>
 		<li>
 			<label class="checkmark"><input type="checkbox" class="is-completed"><span class="check-icon"></span></label>
-			Butternut Squash
+			Butternut Squash <i class="fa fa-trash-o" aria-hidden="true"></i>
 
 		</li>
 	</ul>
