--- a/main.html
+++ b/main.html
@@ -32,31 +32,11 @@
 	
 	<ul class= "list">
 		<!-- check box and list items -->
-		<li>
-			<label class="checkmark"><input type="checkbox" class="is-completed"><span class="check-icon"></span></label>
-			Apples <i class="fa fa-trash-o" aria-hidden="true"></i>
-		</li>
-		<li>
-			<label class="checkmark"><input type="checkbox" class="is-completed"><span class="check-icon"></span></label>
-			Bananas <i class="fa fa-trash-o" aria-hidden="true"></i>
-
-		</li>
-		<li>
-			<label class="checkmark"><input type="checkbox" class="is-completed"><span class="check-icon"></span></label>
-			Pears <i class="fa fa-trash-o" aria-hidden="true"></i>
-
-		</li>
-		<li>
-			<label class="checkmark"><input type="checkbox" class="is-completed"><span class="check-icon"></span></label>
-			Grapes <i class="fa fa-trash-o" aria-hidden="true"></i>
-
-		</li>
-		<li>
-			<label class="checkmark"><input type="checkbox" class="is-completed"><span class="check-icon"></span></label>
-			Butternut Squash <i class="fa fa-trash-o" aria-hidden="true"></i>
-
-		</li>
+		
 	</ul>
+
+	<script src="http://code.jquery.com/jquery.min.js"></script>
+	<script src="js/list.js"></script>
 
 </body>
 </html>	
