Added feature to create and change between lists

--- a/main.html
+++ b/main.html
@@ -20,32 +20,14 @@
 
 	  <div class="list-menu">
 	 	<ul>
-	 		<li><a href="#">Shopping List</a></li>
-	 		<li><a href="#">Grocery List</a></li>
-	 		
+	 		<!-- List Links -->
 	 	</ul>
 	 </div>
 	</nav>
 
 
 	<section class="lists">
-		<div class="item-list">
-			<form class="form-group">
-						<!-- Input box and submit button -->
-				<h2>Shopping List</h2>
-				<hr>
-				<div class="submit-wrapper">
-				<input type="text" name="list-input" 
-				class="input-text" placeholder="Add something!">
-				<button id= "submit-button">Add item to list</button>
-				</div>
-			</form>
-	
-			<ul class= "list">
-		<!-- check box and list items -->
-		
-			</ul>
-		</div>
+			<!-- Each List -->
 	</section>
 
 	<script src="http://code.jquery.com/jquery.min.js"></script>
