--- a/main.html
+++ b/main.html
@@ -31,6 +31,11 @@
 			<!-- Each List -->
 	</section>
 
+	<span class = "preload">
+		<img src="images/list-unchecked.png"> 
+		<img src="images/list-checked.png">
+	</span>
+
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script src="js/list.js"></script>
 	
